Added option to search for drug replacements, updated layouts, made recyclerviews persist their state on fragment changes

--- a/app/src/main/res/layout/fragment_drug_details.xml
+++ b/app/src/main/res/layout/fragment_drug_details.xml
@@ -15,4 +15,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.leinardi.android.speeddial.SpeedDialView
+        android:id="@+id/fab_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:sdMainFabClosedSrc="@drawable/ic_local_pharmacy">
+
+    </com.leinardi.android.speeddial.SpeedDialView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
