--- a/app/src/main/res/layout/fragment_search_drugs.xml
+++ b/app/src/main/res/layout/fragment_search_drugs.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent"
-                                                   android:layout_marginTop="?attr/actionBarSize"
-                                                   android:animateLayoutChanges="true"
-                                                   android:background="@android:color/background_light"
-                                                   tools:context=".mydrugs.MyDrugsFragment"
-                                                   android:id="@+id/search_drugs_layout">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/search_drugs_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="?attr/actionBarSize"
+    android:animateLayoutChanges="true"
+    android:background="@android:color/background_light"
+    tools:context=".mydrugs.MyDrugsFragment">
 
     <EditText
             android:id="@+id/search_drugs_text"
@@ -33,7 +33,8 @@
             android:adjustViewBounds="false"
             android:clickable="true"
             android:cropToPadding="false"
-            android:src="@drawable/ic_search"
+        android:src="@drawable/ic_action_search"
+        android:tint="@android:color/black"
             app:layout_constraintBottom_toBottomOf="@+id/search_drugs_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/search_drugs_text"/>
