--- a/app/src/main/res/layout/row_drug.xml
+++ b/app/src/main/res/layout/row_drug.xml
@@ -42,7 +42,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
-                android:text="@{drug.ammountOfSubstance}"
+            android:text="@{drug.ammountOfSubstance + `, ` + drug.type}"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" android:layout_marginTop="8dp"
