--- a/app/src/main/res/menu/drug_details_fab.xml
+++ b/app/src/main/res/menu/drug_details_fab.xml
@@ -3,11 +3,11 @@
 
     <item
         android:id="@+id/menu_save_drug"
-        android:icon="@drawable/ic_add"
+        android:icon="@drawable/ic_action_save"
         android:title="@string/save_drug" />
 
     <item
         android:id="@+id/menu_find_replacements"
-        android:icon="@drawable/ic_add"
+        android:icon="@drawable/ic_search_replace"
         android:title="@string/find_replacement_drugs" />
 </menu>
