--- a/app/src/main/res/layout/fragment_drug_details.xml
+++ b/app/src/main/res/layout/fragment_drug_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="?attr/actionBarSize"
+    android:animateLayoutChanges="true"
     tools:context=".drugdetails.DrugDetailsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
