--- a/app/src/main/res/menu/drug_details_unsaved_fab.xml
+++ b/app/src/main/res/menu/drug_details_unsaved_fab.xml
@@ -12,6 +12,11 @@
         android:title="@string/find_replacement_drugs" />
 
     <item
+        android:id="@+id/menu_download_manual"
+        android:icon="@drawable/ic_file_download"
+        android:title="@string/download_manual" />
+
+    <item
         android:id="@+id/menu_open_in_browser"
         android:icon="@drawable/ic_open_in_browser"
         android:title="@string/view_in_browser" />
